This is a new note

--- a/studio.html
+++ b/studio.html
@@ -62,7 +62,9 @@ In addition to the program's main podcast, a spinoff arts and culture podcast ti
 	</span>
 	
 	
-	
+	<p>
+	This is a new note
+	</p>
 	
 </body>
 
